added a menu called "Command reference". It shows all possible commands (if an explanation has been entered in the help pages). Also fixed two unlikely nullpointer exceptions when querying a person or helppage without a parameter. did some refactoring.